Leccion 1 Mapear una Entidad

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=shopcenter
+
+spring.sql.init.platform=postgresql
+spring.datasource.url=jdbc:postgresql://localhost:5432/db_shopcenter
+spring.datasource.username=canzervero
+spring.datasource.password=cuervo
+spring.jpa.show-sql=true
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=update
+server.port=8080
